--- a/Rx.NET/Source/facades/System.Reactive.Experimental/System.Reactive.Experimental.csproj
+++ b/Rx.NET/Source/facades/System.Reactive.Experimental/System.Reactive.Experimental.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;net46</TargetFrameworks>
+    <TargetFrameworks>net46</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
