--- a/Rx.NET/Source/facades/System.Reactive.PlatformServices/System.Reactive.PlatformServices.csproj
+++ b/Rx.NET/Source/facades/System.Reactive.PlatformServices/System.Reactive.PlatformServices.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="MSBuild.Sdk.Extras">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;net46;netstandard1.3;netcoreapp1.0;uap10.0</TargetFrameworks>
+    <TargetFrameworks>net46;netstandard2.0;uap10.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
