--- a/.editorconfig
+++ b/.editorconfig
@@ -78,7 +78,7 @@ dotnet_naming_style.camel_case_underscore_style.capitalization = camel_case
 
 # Code style defaults
 dotnet_sort_system_directives_first = true
-dotnet_style_require_accessibility_modifiers = always
+dotnet_style_require_accessibility_modifiers = omit_if_default
 csharp_preserve_single_line_blocks = true
 csharp_preserve_single_line_statements = false
 
