--- a/.editorconfig
+++ b/.editorconfig
@@ -145,6 +145,10 @@ indent_size = 2
 [*.builds]
 indent_size = 2
 
+# Yml/Yaml files
+[*.{yaml,yml}]
+indent_size = 2
+
 # Xml files
 [*.{xml,stylecop,resx,ruleset}]
 indent_size = 2
@@ -156,5 +160,6 @@ indent_size = 2
 # Shell scripts
 [*.sh]
 end_of_line = lf
+
 [*.{cmd, bat}]
 end_of_line = crlf
