--- a/.vsts.ix-pr.yml
+++ b/.vsts.ix-pr.yml
@@ -1,29 +1,8 @@
 trigger: none
-queue: Hosted VS2017
 
+queue: Hosted VS2017
 variables: 
   BuildConfiguration: Release
-  BuildPlatform: Any CPU
-    
+  
 steps:
-- task: BatchScript@1
-  inputs:
-    filename: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Enterprise\\Common7\\Tools\\VsDevCmd.bat"
-    arguments: -no_logo
-    modifyEnvironment: true
-  displayName: Setup Environment Variables
-    
-- task: PowerShell@1
-  inputs:
-    scriptName: 'Ix.NET/Source/build-new.ps1'
-    workingFolder: 'Ix.NET/Source'
-  env:
-    VSTS_ACCESS_TOKEN: $(System.AccessToken)
-  displayName: Build
-
-- task: PublishBuildArtifacts@1
-  inputs:
-    PathtoPublish: 'Ix.NET/Source/artifacts'
-    ArtifactName: artifacts
-    publishLocation: Container
-  condition: eq(variables['system.pullrequest.isfork'], false)
+- template: .vsts.ix-shared.yml
