--- a/.vsts.rx-shared.yml
+++ b/.vsts.rx-shared.yml
@@ -49,7 +49,9 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: test
-    projects: Rx.NET/Source/tests/**/Tests.*.csproj;-:Rx.NET/Source/tests/**/*.Uwp.*.csproj
+    projects: |
+      Rx.NET/Source/tests/**/Tests.*.csproj
+      !Rx.NET/Source/tests/**/*.Uwp.*.csproj
     arguments: -c $(BuildConfiguration) --no-build --no-restore --filter "SkipCI!=true" --collect:"Code Coverage" -s $(System.DefaultWorkingDirectory)/Rx.NET/Source/CodeCoverage.runsettings
   displayName: Run Unit Tests
 
