--- a/.vsts.ix-shared.yml
+++ b/.vsts.ix-shared.yml
@@ -16,6 +16,13 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
+    command: build
+    projects: Ix.NET/Source/refs/**/System.Interactive*.csproj
+    arguments: -c $(BuildConfiguration)   
+  displayName: Build reference assemblies
+
+- task: DotNetCoreCLI@2
+  inputs:
     command: pack
     packagesToPack: Ix.NET/Source/**/System.Interactive*.csproj;!Ix.NET/Source/**/*.Tests*.csproj
     configuration: $(BuildConfiguration)
