--- a/Ix.NET/Source/System.Interactive/System.Interactive.csproj
+++ b/Ix.NET/Source/System.Interactive/System.Interactive.csproj
@@ -5,6 +5,7 @@
     <AssemblyTitle>Interactive Extensions - Main Library</AssemblyTitle>
     <Authors>Microsoft</Authors>
     <TargetFrameworks>net45;netstandard1.0;netstandard2.0</TargetFrameworks>
+    <RefTargetFrameworks>netstandard1.0;netcoreapp2.0;netstandard2.1</RefTargetFrameworks>
     <PackageTags>Ix;Interactive;Extensions;Enumerable</PackageTags>
   </PropertyGroup>
 
@@ -12,37 +13,7 @@
     <EmbeddedResource Include="Properties\System.Interactive.rd.xml" />
   </ItemGroup>
 
-  <PropertyGroup>
-    <TargetsForTfmSpecificContentInPackage>$(TargetsForTfmSpecificContentInPackage);GetRefs</TargetsForTfmSpecificContentInPackage>
-  </PropertyGroup>
 
 
-  <Target Name="GetRefs">
-
-    <MSBuild Projects="..\refs\System.Interactive\System.Interactive.csproj" 
-             Targets="_GetReferenceAssemblies" 
-             Properties="TargetFramework=$(TargetFramework)">
-
-      <Output TaskParameter="TargetOutputs" ItemName="_refAssms" />
-    </MSBuild>
-
-    <ItemGroup>
-      <TfmSpecificPackageFile Include="@(_refAssms)" PackagePath="ref/$(TargetFramework)" />
-    </ItemGroup>
-  </Target>
-
-  <Target Name="GetRefsWithoutLib" BeforeTargets="_GetPackageFiles">
-    <MSBuild Projects="..\refs\System.Interactive\System.Interactive.csproj"
-             Targets="_GetReferenceAssemblies"
-             Properties="TargetFramework=netcoreapp2.0">
-
-      <Output TaskParameter="TargetOutputs" ItemName="_refAssms20" />
-    </MSBuild>
-
-    <ItemGroup>
-      <None Include="@(_refAssms20)" PackagePath="ref/netcoreapp2.0" Pack="true" />
-    </ItemGroup>
-
-  </Target>
   
 </Project>
