--- a/Ix.NET/Source/Directory.build.targets
+++ b/Ix.NET/Source/Directory.build.targets
@@ -6,29 +6,39 @@
   
   <!-- This props all need to be set in targets as they depend on the values set earlier -->
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.0'">
-    <DefineConstants>$(DefineConstants);NO_ARRAY_EMPTY;NO_CODE_COVERAGE_ATTRIBUTE;CRIPPLED_REFLECTION;PLIB;SIGNED</DefineConstants>
+    <DefineConstants>$(DefineConstants);NO_ARRAY_EMPTY;NO_CODE_COVERAGE_ATTRIBUTE;CRIPPLED_REFLECTION;PLIB;</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard1.3'">
-    <DefineConstants>$(DefineConstants);NO_CODE_COVERAGE_ATTRIBUTE;CRIPPLED_REFLECTION;PLIB;SIGNED</DefineConstants>
+    <DefineConstants>$(DefineConstants);NO_CODE_COVERAGE_ATTRIBUTE;CRIPPLED_REFLECTION;PLIB;</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <DefineConstants>$(DefineConstants);PLIB;SIGNED</DefineConstants>
+    <DefineConstants>$(DefineConstants);PLIB;</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(TargetFramework)' == 'net45'">
-    <DefineConstants>$(DefineConstants);HAS_APTCA;NO_ARRAY_EMPTY;DESKTOPCLR;DESKTOPCLR45;SIGNED</DefineConstants>
+    <DefineConstants>$(DefineConstants);HAS_APTCA;NO_ARRAY_EMPTY</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition="'$(TargetFramework)' == 'net46'">
-    <DefineConstants>$(DefineConstants);HAS_APTCA;DESKTOPCLR;DESKTOPCLR46;SIGNED</DefineConstants>
+    <DefineConstants>$(DefineConstants);HAS_APTCA;</DefineConstants>
   </PropertyGroup>
 
 
-  <Target Name="GetRefsWithoutLib" BeforeTargets="_GetPackageFiles" Condition="'$(RefTargetFrameworks)' != '' and Exists('$(MSBuildThisFileDirectory)refs\$(MSBuildProjectName)\$(MSBuildProjectName).csproj') ">
-    <ItemGroup>
-      <_RefTargetFrameworks Include="$(RefTargetFrameworks.Split(';'))" />
-    </ItemGroup>
-    <MSBuild Projects="$(MSBuildThisFileDirectory)refs\$(MSBuildProjectName)\$(MSBuildProjectName).csproj" Targets="_GetReferenceAssemblies" Properties="TargetFramework=%(_RefTargetFrameworks.Identity)">
+  <Target Name="GetRefsWithoutLib" 
+          BeforeTargets="_GetPackageFiles" 
+          Condition=" Exists('$(MSBuildThisFileDirectory)refs\$(MSBuildProjectName)\$(MSBuildProjectName).csproj') ">
+    
+    <MSBuild Projects="$(MSBuildThisFileDirectory)refs\$(MSBuildProjectName)\$(MSBuildProjectName).csproj" 
+             Targets="_GetTargetFrameworksOutput">
 
-      <Output TaskParameter="TargetOutputs" ItemName="_refAssms" />
+      <Output TaskParameter="TargetOutputs" 
+              ItemName="_RefTargetFrameworks" />
+    </MSBuild>
+
+    <MSBuild Projects="$(MSBuildThisFileDirectory)refs\$(MSBuildProjectName)\$(MSBuildProjectName).csproj" 
+             Targets="_GetReferenceAssemblies" 
+             Properties="TargetFramework=%(_RefTargetFrameworks.Identity)">
+
+      <Output TaskParameter="TargetOutputs" 
+              ItemName="_refAssms" />
     </MSBuild>
 
     <ItemGroup>
