set DOTNET_SKIP_FIRST_TIME_EXPERIENCE to true so we don't waste time caching on build agents

--- a/.vsts.ix-ci.yml
+++ b/.vsts.ix-ci.yml
@@ -13,6 +13,7 @@ trigger:
 queue: Hosted VS2017
 variables: 
   BuildConfiguration: Release
+  DOTNET_SKIP_FIRST_TIME_EXPERIENCE: true
   
 steps:
 - template: .vsts.ix-shared.yml
