Update and rename .azure-pipelines.rx.yml to azure-pipelines.rx.yml

--- a/azure-pipelines.rx.yml
+++ b/azure-pipelines.rx.yml
@@ -7,9 +7,10 @@ trigger:
     include:
       - Rx.NET/Source/*
       - .editorconfig
-      - .azure-pipelines.rx.yml
+      - azure-pipelines.rx.yml
 
-queue: Hosted VS2017
+pool:
+  vmImage: vs2017-win2016
 
 variables: 
   BuildConfiguration: Release
